--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ idna==3.6
 ignr==2.2
 importlib-metadata==7.0.1
 ipykernel==6.29.2
-ipython==8.21.0
+ipython
 jedi==0.19.1
 Jinja2==3.1.3
 jsonschema==4.21.1
