Atualizar requirements.txt para simplificar dependências e incluir pacotes essenciais

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,146 +1,7 @@
-altair
-appdirs
-asttokens
-attrs
-
-beautifulsoup4
-
-blinker
-cachetools
-certifi
-
-charset-normalizer
-click
-colorama
-comm
-contourpy
-cycler
-
-debugpy
-decorator
-entrypoints
-ecuting
-Faker
-
-favicon
-fonttools
-
-frozendict
-gitdb
-
-GitPython
-
-htbuilder
-html5lib
-na
-nr
-portlib-metadata
-ipykernel
-
-ipython
-jedi
-
-Jinja2
-jsonschema
-
-jsonschema-specifications
-
-jupyter_client
-jupyter_core
-kiwisolver
-lxml
-Markdown
-markdown-it-py
-markdownlit
-MarkupSafe
-matplotlib
-matplotlib-inline
-mdurl
-more-itertools
-
-multitasking
-
-nest-asyncio
-numpy
-
-packaging
-andas
-pandas-datareader
-
-parso
-peewee
-
-pillow
-
-platformdirs
-plotly
-
-prometheus_client
-
-prompt-toolkit
-
-protobuf
-
-psutil
-pure-eval
-pyarrow
-
-pydeck
-
-Pygments
-
-pymdown-extensions
-yparsing
-python-dateutil
-pytz
-
-PyYAML
-pyzmq
-
-referencing
-
-requests
-
-rich
-
-rpds-py
-
-six
-
-smmap
-soupsieve-annotated-text
-stack-data
-streamlit
-
-streamlit-camera-input-live
-streamlit-card
-streamlit-embedcode
-streamlit-extras
-streamlit-faker
-streamlit-image-coordinates
-streamlit-keyup
-streamlit-toggle-switch
-streamlit-vertical-slider
-tenacity
-toml
-
-toolz
-
-tornado
-aitlets
-
-typing_extensions
-tzdata
-
-tzlocal
-llib3
-validators
-
-watchdog
-wcwidth
-
-webencodings
+pandas
 yfinance
+streamlit
+plotly
+streamlit_extras
 
-zipp
 
